tests/type_args_strict/type_args_strict.exp
Error ----------------------------------------------------------------------------------------------------- test.js:21:8

Cannot use `MyClass` [1] without 1 type argument.

   test.js:21:8
   21| var c: MyClass = new MyClass(0); // error, missing argument list (1)
              ^^^^^^^

References:
   test.js:14:15
   14| class MyClass<T> {
                     ^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:34:9

Cannot use `MyClass2` [1] without 1-2 type arguments.

   test.js:34:9
   34| var c2: MyClass2 = new MyClass2(0, ""); // error, missing argument list (1-2)
               ^^^^^^^^

References:
   test.js:25:16
   25| class MyClass2<T, U = string> {
                      ^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:42:8

Cannot use `MyObject` [1] without 1 type argument.

   test.js:42:8
   42| var o: MyObject = { x: 0 }; // error, missing argument list
              ^^^^^^^^

References:
   test.js:38:15
   38| type MyObject<T> = {
                     ^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:46:36

Cannot use `MyObject` [1] without 1 type argument.

   test.js:46:36
   46| type MySubobject = { y: number } & MyObject; // error, missing argument list
                                          ^^^^^^^^

References:
   test.js:38:15
   38| type MyObject<T> = {
                     ^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:50:11

Cannot use `MyInterface` [1] without 1 type argument.

   test.js:50:11
   50| interface MyInterface<T> {
                 ^^^^^^^^^^^

References:
   test.js:50:23
   50| interface MyInterface<T> {
                             ^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:60:26

Cannot use `MyClass` [1] with less than 1 type argument.

   test.js:60:26
   60| class MySubclass extends MyClass { // error, missing argument list
                                ^^^^^^^

References:
   test.js:14:15
   14| class MyClass<T> {
                     ^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:69:27

Cannot use `MyClass3` [1] with less than 1 type argument.

   test.js:69:27
   69| class MySubclass2 extends MyClass3 { } // error, missing argument list
                                 ^^^^^^^^

References:
   test.js:67:16
   67| class MyClass3<X, Y = void> { }
                      ^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:81:11

Cannot use `MyClass4` [1] with less than 1 type argument.

   test.js:81:11
   81| var poly: MyClass4<> = new MyClass4; // error, too few arguments
                 ^^^^^^^^^^

References:
   test.js:79:16
   79| class MyClass4<X> { }
                      ^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:85:11

Cannot instantiate `MyClass5` because `MyClass5` [1] is not a polymorphic type.

   85| var mono: MyClass5<> = new MyClass5; // error, class is not polymorphic
                 ^^^^^^^^^^ [1]



Found 9 errors
